Updates for SPEAR spacing on aggregate pages. #https://github.com/srophe/srophe-app-data/issues/658

--- a/srophe-app/resources/css/spear.css
+++ b/srophe-app/resources/css/spear.css
@@ -80,3 +80,6 @@ h4 {font-weight:500;}
     margin-left: 1em;
 }
 .factoid h4 {font-size:large;}
+.spear-aggregate {margin-left:1.5em;}
+.spear-aggregate h4 {margin-top:1.5em;}
+.spear-aggregate p {margin:.25em;}
